--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,9 +6,9 @@
   "author": "",
   "type": "commonjs",
   "main": "index.js",
-"scripts": {
-  "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
-},
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+  },
   "devDependencies": {
     "@types/node": "^24.7.2",
     "ts-node": "^10.9.2",
@@ -17,7 +17,10 @@
   },
   "dependencies": {
     "@fastify/postgres": "^6.0.2",
+    "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
+    "fastify-postgres": "^3.6.0",
+    "node-pg-migrate": "^8.0.3",
     "pg": "^8.16.3"
   }
 }
