--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,11 +16,14 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.50",
     "@fastify/postgres": "^6.0.2",
+    "ai": "^5.0.68",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
     "fastify-postgres": "^3.6.0",
     "node-pg-migrate": "^8.0.3",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "zod": "^4.1.12"
   }
 }
