--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,7 +14,8 @@
     "ai": "^5.0.76",
     "ai-elements": "^1.1.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
