--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,10 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "migrate:create": "node-pg-migrate create --migrations-dir ./apps/api/migrations",
+    "migrate:up": "node-pg-migrate up --migrations-dir ./apps/api/migrations",
+    "migrate:down": "node-pg-migrate down --migrations-dir ./apps/api/migrations"
   },
   "devDependencies": {
     "@types/node": "^24.7.2",
@@ -16,9 +19,10 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.50",
+    "@ai-sdk/openai": "^2.0.75",
     "@fastify/cors": "^11.1.0",
     "@fastify/postgres": "^6.0.2",
+    "@langchain/textsplitters": "^1.0.1",
     "ai": "^5.0.68",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
